--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,6 +1,12 @@
 name: Application CI
 on: [push, pull_request]
 jobs:
+    validation:
+        name: "Validation"
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - uses: gradle/wrapper-validation-action@v1   
     pipeline:
         name: gradlewrappervalidation pipeline
         runs-on: ubuntu-latest
